--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1",
     "winston": "^3.17.0",
     "zxcvbn": "^4.4.2"
   },
