--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "node server.js",
+  "dev": "nodemon server.js",
+  "test": "jest --coverage",
+  "test:watch": "jest --watch",
+  "test:unit": "jest tests/unit --coverage",
+  "test:integration": "jest tests/integration --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
+    "@aws-sdk/client-ses": "^3.744.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
@@ -30,6 +35,14 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "eslint-plugin-jsdoc": "^50.6.3",
+    "eslint-plugin-security": "^3.0.1",
+    "jest": "^27.5.1",
+    "jest-extended": "^4.0.2",
+    "jest-junit": "^16.0.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0"
   }
 }
